--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yup": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
