--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "mongoose": "^6.10.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
