--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "formik": "^2.2.9",
@@ -25,6 +26,7 @@
     "yup": "^1.0.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "autoprefixer": "^10.4.13",
     "mongoose": "^6.10.0",
     "postcss": "^8.4.21",
