--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.2.9",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/nodemailer": "^6.4.7",
     "autoprefixer": "^10.4.13",
     "mongoose": "^6.10.0",
     "postcss": "^8.4.21",
